<resources>
    <string name="app_name">Paperless</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_desc">Masuk untuk fitur yang lebih lengkap</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="login_desc_long">Masuk dengan akun anda sekarang juga untuk memulai membuka toko atau berbelanja.</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="doesnt_have_account">Belum punya akun?</string>
    <string name="title_shopping">Belanja</string>
    <string name="title_explore">Temukan</string>
    <string name="title_profile">Saya</string>
    <string name="your_store">Toko anda</string>
    <string name="view_all">Selengkapnya</string>
    <string name="empty_store">Anda belum memiliki toko</string>
    <string name="register">Buat akun</string>
    <string name="register_desc">Lengkapi semua form di bawah ini dengan tepat untuk melanjutkan.</string>
    <string name="fullname">Nama anda</string>
    <string name="confirm_password">Konfirmasi password</string>
    <string name="terms_and_condition">Dengan mendaftar berarti anda menyetujui syarat dan ketentuan kami.</string>
    <string name="preference">Preferensi</string>
    <string name="pref_profile">Data diri</string>
    <string name="pref_payment">Pembayaran</string>
    <string name="pref_privacy">Privasi</string>
    <string name="pref_store">Toko</string>
    <string name="title_activity_create_store">Buat toko</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_store"> </string>
    <string name="store_name">Nama toko</string>
    <string name="store_desc">Deskripsi toko</string>
    <string name="store_phone">Telepon</string>
    <string name="store_address">Alamat toko</string>
    <string name="store_create">Buat toko</string>
    <string name="title_activity_manage">ManageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_reset_password">Lupa kata sandi</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_reset">Reset password</string>
    <string name="reset_desc">Masukkan email anda yang terdaftar dalam aplikasi ini</string>
    <string name="btn_send_verif">Kirim verifikasi</string>
    <string name="btn_add_image">Pilih foto</string>
    <string name="hint_store_name">Masukkan nama toko</string>
    <string name="hint_store_description">Deskripsi toko</string>
    <string name="hint_store_phone">Nomor telepon toko +62...</string>
    <string name="hint_store_address">Alamat toko</string>
    <string name="btn_create_store">Buat toko</string>
    <string name="info_store_created">Toko berhasil dibuat</string>
    <string name="hint_store_image">Store image</string>
    <string name="info_your_store">Milik anda</string>
    <string name="info_image">Image</string>
    <string name="menu_etalase">Etalase</string>
    <string name="menu_product">Produk</string>
    <string name="menu_employee">Karyawan</string>
    <string name="lorem">Lorem ipsum dolor sit amet</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet.</string>
    <string name="info_see_detail">Lihat detail</string>
    <string name="info_edit">Edit</string>
    <string name="title_delete">Hapus</string>
    <string name="title_activity_product">Produk</string>
    <string name="hint_product_name">Masukkan nama produk</string>
    <string name="hint_product_price">Harga produk</string>
    <string name="hint_product_quantity">Qty</string>
    <string name="hint_product_online_available">Produk ini juga dijual online</string>
    <string name="hint_product_weight">Berat produk (kg)</string>
    <string name="btn_save_product">Simpan produk</string>
    <string name="info_selected_product">Produk yang dipilih</string>
    <string name="placeholder_zero">0</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="hint_discount">Masukkan jumlah diskkon</string>
    <string name="btn_checkout">Checkout</string>
    <string name="info_delete">Hapus</string>
    <string name="hint_product_desc">Deskripsi produk</string>
    <string name="hint_product_have_stock">Produk ini memiliki stok</string>
    <string name="title_activity_search_user">SearchUserActivity</string>
    <string name="hint_search_user">Cari pengguna</string>
    <string name="hint_search_user_alt">Mulailah dengan mengetik nama</string>
    <string name="hint_product_code">Kode produk (opsional)</string>
    <string name="title_find">Temukan</string>
    <string name="title_find_alt">katalog produk</string>
    <string name="hint_search_catalog">Cari produk</string>
    <string name="title_by_category">Kategori</string>
    <string name="title_dashboard_alt">anda</string>
    <string name="title_profile_alt">Profil</string>
    <string name="title_notifications_alt">Notifikasi</string>
    <string name="menu_transaction">Riwayat transaksi</string>
</resources>