<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_etalase"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_etalase" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/menu_product" />

        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/menu_employee" />

        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/menu_transaction"/>
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_setting"-->
<!--                android:icon="@drawable/ic_settings_black_24dp"-->
<!--                android:title="@string/menu_share" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
