<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/title_reset"
        android:textColor="@color/colorGreyDarker"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_reset_desc"
        android:text="@string/reset_desc"
        app:layout_constraintTop_toBottomOf="@id/title_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_desc"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:id="@+id/in_email"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/hint_email"
            android:id="@+id/et_email"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:text="@string/btn_send_verif"
        android:id="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@id/in_email"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
