<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/store_image"
            android:src="@drawable/image_placeholder"
            android:scaleType="centerCrop"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/hint_store_image" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:id="@+id/btn_add_image"
            android:textAllCaps="false"
            android:text="@string/btn_add_image"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:id="@+id/in_store_name"
            android:hint="@string/hint_store_name"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:id="@+id/et_store_name"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/in_store_desc"
            app:errorEnabled="true"
            android:hint="@string/hint_store_description"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_store_desc"
                android:maxLines="5"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/hint_store_phone"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            android:id="@+id/in_store_phone"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:digits="0123456789+"
                android:id="@+id/et_store_phone"
                android:inputType="phone|numberSigned"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/hint_email"
            android:id="@+id/in_store_email"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_store_email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:id="@+id/in_store_address"
            android:hint="@string/hint_store_address"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="5"
                android:inputType="textPostalAddress"
                android:id="@+id/et_store_address"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/btn_create_store"
            android:textAllCaps="false"
            android:text="@string/btn_create_store"
            android:layout_height="56dp"/>
    </LinearLayout>

</ScrollView>
