<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_doodle_personalize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="@string/login_desc_long"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:id="@+id/btn_login"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:icon="@drawable/ic_arrow_forward_24dp"
                android:id="@+id/btn_register"
                android:layout_height="wrap_content"/>


        </LinearLayout>



    </LinearLayout>




</RelativeLayout>